# audio2video

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
src/audio2video/: cli.py
tests/: test_cli.py
