[project]
name = "audio2video"
version = "0.1.0"
description = "Convert audio files with static images to video format for YouTube and social media"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["audio", "video", "conversion", "youtube", "moviepy", "podcast"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video :: Conversion",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "moviepy>=1.0.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/audio2video"
Documentation = "https://github.com/yourusername/audio2video/wiki"
Repository = "https://github.com/yourusername/audio2video.git"
Issues = "https://github.com/yourusername/audio2video/issues"

[project.scripts]
audio2video = "audio2video.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/audio2video"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

